Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -12,6 +12,8 @@ app:
 
 mlflow:
   experiment_name: "ray-xgboost-${env.env}-${oc.env:DOMINO_STARTING_USERNAME,unknown}"
+  model_name: "ray-xgboost-${env.env}-${oc.env:DOMINO_STARTING_USERNAME,unknown}"
+  model_desc: "ray-xgboost-${env.env}-${oc.env:DOMINO_STARTING_USERNAME,unknown}"
 
 ray:
   num_workers: 1
